Code clean-up and other chores
Added credits
Minor changes to mod TOML
Streamlined some logic
Removed unneeded code